--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -180,9 +180,19 @@ body {
 	bottom: -1px !important;
 //	bottom: 0px;
 	margin: 0px;
-	}
+}
 	
-.footer .ui-btn { background: transparent; height: 44px;  top: 0px !important; bottom: 0px !important; padding: 0px; margin: 0px; border-color: transparent; box-shadow: none; padding: 0px}
+.footer .ui-btn {
+	background: transparent;
+	height: 44px;
+	top: 0px !important;
+	bottom: 0px !important;
+	padding: 0px;
+	margin: 0px;
+	border-color: transparent;
+	box-shadow: none;
+	padding: 0px
+}
 
 .footer .ui-btn-inner { margin-top: 6px; border: 0px }
 
@@ -324,6 +334,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	padding-right: 0px;
 	padding-left: 0px;
 	text-align: center;
+	height: 22px;
 }
 
 #dialogContent {
@@ -655,11 +666,12 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 
 #scoreCardClose {
 	width: 125px;
-	height: auto;
-	position: absolute;
-	bottom: 5px;
-	right: 12px;
-	margin: 2px;
+//	height: auto;
+//	position: absolute;
+//	bottom: 5px;
+//	right: 12px;
+//	margin: 2px;
+	float: right;
 }
 
 #scoreCardClose .ui-icon {
@@ -798,37 +810,6 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 
 	-webkit-overflow-scrolling: touch;
 }
-/*
-.scrollfix1 {
-    display:-webkit-box;
-    -webkit-box-orient:vertical;
-    -webkit-box-flex:1;
-     overflow:auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-
-.scrollfix1Wrap {
-    display:-webkit-box;
-    -webkit-box-orient:vertical;
-    -webkit-box-flex:1;
-    overflow:auto;
-    margin-bottom:-1px;
-}
- */
-
-
-/*
-	top: 44;
-	bottom: 0px;
-	left: 0px;
-	width: 100%;
-	border: 0;
-	margin: 0;
-	padding-bottom: 0px !important;
-	margin-bottom: 0px !important;
-    margin-left     : 0px !important;
-	margin-right: 0px !important; */
 
 .round {
 	-webkit-transform: translateZ(0);
@@ -836,6 +817,17 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	-webkit-backface-visibility: hidden;
 }
 
+/* #deletionPopup {
+//	opacity: 0.5 !important;
+	background: rgba(255, 255, 255, 0.5) !important;
+}
+*/
+#deletionContent {
+//	opacity: 0.5 !important;
+	background: rgba(225, 225, 225, 0.66) !important;
+}
 
-
+#delPopUp {
+	background: rgba(225, 225, 225, 0.66) !important;
+}
 
