--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -343,8 +343,10 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 	clear: both;
 	padding-top: 0px;
 	padding: 6px;
+	padding-bottom: 0px;
 //	margin-left: auto;
 //	margin-right: auto;
+	margin-bottom: 0px;;
 	margin-left: 0px;
 	margin-right: 0px;
 //	padding-bottom: 47px !important;
@@ -649,31 +651,50 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 }
 
 #scoreCardButtons {
-	position: absolute;
-	clear: both;
+//	position: absolute;
+//	clear: both;
+//	float: left;
 	width: 100%;
-	bottom: 0px;
-	left: 0px;
-	right: 0px;
+	padding: 2px;
+	height: 46px;
+	min-height: 46px;
+	border: 0px;
+	margin: 0px;
+//	top: 48px;
+	margin-top: 16px;
 }
 
 
-.scoreCardFinish {
-	position: absolute;
-	max-width: 125px;
+/* .scoreCardFinish {
+//	position: absolute;
+//	max-width: 125px;
 	float: left;
-	bottom: 5px;
-	left: 10px;
+	top: 6px;
+//	bottom: 5px;
+//	left: 10px;
+	border-radius: 8px !important;
+} */
+
+#scoreCardFinish {
+	position: absolute;
+	max-width: 115px;
+//	float: left;
+//	top: 24px;
+	margin: 0px;
+	left: 6px;
+	bottom: -16px;
+	border-radius: 8px !important;
 }
 
-
-.scoreCardClose {
-	position: absolute;
-	max-width: 125px;
+#scoreCardClose {
+	position: relative;
+	max-width: 115px;
 	float: right;	
-	bottom: 10px;
-	right: 10px;
-
+//	top: 24px;
+	margin: 0px;
+	bottom: 19px;
+	right: 6px;
+	border-radius: 8px !important;
 }
 
 
