Ylimääräinen padding aiheutta sen että tuloskorttia pysty skrollaamaan sivusuunnassakin

--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -655,7 +655,7 @@ a.ui-slider-handle {-webkit-transition: none; -moz-transition: none; } */
 //	clear: both;
 //	float: left;
 	width: 100%;
-	padding: 2px;
+//	padding: 2px;
 	height: 46px;
 	min-height: 46px;
 	border: 0px;
